--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2146,7 +2146,7 @@ button, input, textarea, li, div {
             b {
                 line-height: 137%;
                 letter-spacing: 0.03em;
-                color: $color-main-light;
+                color: $color-main-dark;
             }
 
             span {
